# glue

./: .gitignore  Dockerfile  README.md  example.env  main.py  pyproject.toml  shell.nix
.github/workflows/: google-cloudrun-docker.yml
