[tool.poetry]
name = "decaturmakers-glue"
version = "0.1.0"
description = ""
authors = ["Evan Goode <mail@evangoo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
requests = "^2.25.1"
Flask-HTTPAuth = "^4.4.0"
APScheduler = "^3.7.0"
python-dotenv = "^0.18.0"
gspread = "^3.7.0"
gunicorn = "^20.1.0"
pytz = "^2021.1"
python-dateutil = "^2.8.2"
types-python-dateutil = "^0.1.4"
types-requests = "^2.25.0"
mypy = "^0.910"
black = "^21.6b0"
google-api-python-client = "^2.15.0"
google-auth = "^1.34.0"
google-auth-oauthlib = "^0.4.5"
google-auth-httplib2 = "^0.1.0"
setuptools = "^65.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
